--- a/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
     "    \n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # calculate the sigmoid of z\n",
-    "    h = None\n",
+    "    h = 1/(1+np.exp(-z))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return h"
@@ -951,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
