--- a/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
@@ -363,9 +363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-21d96efc573b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# verify that when the model predicts close to 1, but the actual label is 0, the loss is a large positive value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m0.9999\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# loss is about 9.2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# verify that when the model predicts close to 1, but the actual label is 0, the loss is a large positive value\n",
     "-1 * (1 - 0) * np.log(1 - 0.9999) # loss is about 9.2"
@@ -476,21 +488,21 @@
     "    '''\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # get 'm', the number of rows in matrix x\n",
-    "    m = None\n",
+    "    m = x.shape[0]\n",
     "    \n",
     "    for i in range(0, num_iters):\n",
     "        \n",
     "        # get z, the dot product of x and theta\n",
-    "        z = None\n",
+    "        z = np.dot(x,theta)\n",
     "        \n",
     "        # get the sigmoid of z\n",
-    "        h = None\n",
+    "        h = sigmoid(z)\n",
     "        \n",
     "        # calculate the cost function\n",
-    "        J = None\n",
+    "        J = (-1/m) * (np.dot(y.T,np.log(h)) + np.dot((1-y).T,np.log(1-h)))\n",
     "\n",
     "        # update the weights theta\n",
-    "        theta = None\n",
+    "        theta = theta - (alpha/m)*(np.dot(x.T,(h-y)))\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    J = float(J)\n",
