--- a/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
@@ -606,10 +606,10 @@
     "    for word in word_l:\n",
     "        \n",
     "        # increment the word count for the positive label 1\n",
-    "        x[0,1] += None\n",
+    "        x[0,1] += freqs.get((word,1),0)\n",
     "        \n",
     "        # increment the word count for the negative label 0\n",
-    "        x[0,2] += None\n",
+    "        x[0,2] += freqs.get((word,0),0)\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    assert(x.shape == (1, 3))\n",
