Implemented "predict_tweet"

--- a/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
@@ -744,10 +744,10 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    \n",
     "    # extract the features of the tweet and store it into x\n",
-    "    x = None\n",
+    "    x = extract_features(tweet, freqs)\n",
     "    \n",
     "    # make the prediction using x and theta\n",
-    "    y_pred = None\n",
+    "    y_pred = sigmoid(np.dot(x,theta))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
