Implemented "test_logistic_regression"

--- a/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-1/C1_W1_Assignment.ipynb
@@ -851,14 +851,14 @@
     "        \n",
     "        if y_pred > 0.5:\n",
     "            # append 1.0 to the list\n",
-    "            None\n",
+    "            y_hat.append(1)\n",
     "        else:\n",
     "            # append 0 to the list\n",
-    "            None\n",
+    "            y_hat.append(0)\n",
     "\n",
     "    # With the above implementation, y_hat is a list, but test_y is (m,1) array\n",
     "    # convert both to one-dimensional arrays in order to compare them using the '==' operator\n",
-    "    accuracy = None\n",
+    "    accuracy = np.sum(np.asarray(y_hat) == np.squeeze(test_y)) / len(y_hat)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
