--- a/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
@@ -376,38 +376,38 @@
     "        if pair[1] > 0:\n",
     "\n",
     "            # Increment the number of positive words by the count for this (word, label) pair\n",
-    "            N_pos += None\n",
+    "            N_pos += pair[1]\n",
     "\n",
     "        # else, the label is negative\n",
     "        else:\n",
     "\n",
     "            # increment the number of negative words by the count for this (word,label) pair\n",
-    "            N_neg += None\n",
+    "            N_neg += pair[1]\n",
     "\n",
     "    # Calculate D, the number of documents\n",
-    "    D = None\n",
+    "    D = train_y.shape[0]\n",
     "\n",
     "    # Calculate D_pos, the number of positive documents (*hint: use sum(<np_array>))\n",
-    "    D_pos = None\n",
+    "    D_pos = sum(map(lambda x : x == 1, train_y))\n",
     "\n",
     "    # Calculate D_neg, the number of negative documents (*hint: compute using D and D_pos)\n",
-    "    D_neg = None\n",
+    "    D_neg = D - D_pos\n",
     "\n",
     "    # Calculate logprior\n",
-    "    logprior = None\n",
+    "    logprior = np.log(D_pos) - np.log(D_neg)\n",
     "\n",
     "    # For each word in the vocabulary...\n",
     "    for word in vocab:\n",
     "        # get the positive and negative frequency of the word\n",
-    "        freq_pos = None\n",
-    "        freq_neg = None\n",
+    "        freq_pos = freqs.get((word,1),0)\n",
+    "        freq_neg = freqs.get((word,0),0)\n",
     "\n",
     "        # calculate the probability that each word is positive, and negative\n",
-    "        p_w_pos = None\n",
-    "        p_w_neg = None\n",
+    "        p_w_pos = (freq_pos+1)/(N_pos+V)\n",
+    "        p_w_neg = (freq_neg+1)/(N_neg+V)\n",
     "\n",
     "        # calculate the log likelihood of the word\n",
-    "        loglikelihood[word] = None\n",
+    "        loglikelihood[word] = np.log(p_w_pos/p_w_neg)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
