--- a/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,13 +376,13 @@
     "        if pair[1] > 0:\n",
     "\n",
     "            # Increment the number of positive words by the count for this (word, label) pair\n",
-    "            N_pos += pair[1]\n",
+    "            N_pos += freqs[pair]\n",
     "\n",
     "        # else, the label is negative\n",
     "        else:\n",
     "\n",
     "            # increment the number of negative words by the count for this (word,label) pair\n",
-    "            N_neg += pair[1]\n",
+    "            N_neg += freqs[pair]\n",
     "\n",
     "    # Calculate D, the number of documents\n",
     "    D = train_y.shape[0]\n",
@@ -416,9 +416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'freqs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-e656c651ba0d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# UNQ_C3 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mlogprior\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloglikelihood\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_naive_bayes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfreqs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogprior\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloglikelihood\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'freqs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C3 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
