Implemented "naive_bayes_predict"

--- a/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
@@ -493,24 +493,24 @@
     "    '''\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # process the tweet to get a list of words\n",
-    "    word_l = None\n",
+    "    word_l = process_tweet(tweet)\n",
     "\n",
     "    # initialize probability to zero\n",
     "    p = 0\n",
     "\n",
     "    # add the logprior\n",
-    "    p += None\n",
+    "    p += logprior\n",
     "\n",
     "    for word in word_l:\n",
     "\n",
     "        # check if the word exists in the loglikelihood dictionary\n",
     "        if word in loglikelihood:\n",
     "            # add the log likelihood of that word to the probability\n",
-    "            p += None\n",
+    "            p += loglikelihood[word]\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
-    "    return p\n"
+    "    return p"
    ]
   },
   {
