Implemented "get_ratio"

--- a/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-2/C1_W2_Assignment.ipynb
@@ -753,13 +753,13 @@
     "    pos_neg_ratio = {'positive': 0, 'negative': 0, 'ratio': 0.0}\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # use lookup() to find positive counts for the word (denoted by the integer 1)\n",
-    "    pos_neg_ratio['positive'] = None\n",
+    "    pos_neg_ratio['positive'] = lookup(freqs,word,1)\n",
     "\n",
     "    # use lookup() to find negative counts for the word (denoted by integer 0)\n",
-    "    pos_neg_ratio['negative'] = None\n",
+    "    pos_neg_ratio['negative'] = lookup(freqs,word,0)\n",
     "\n",
     "    # calculate the ratio of positive to negative counts for the word\n",
-    "    pos_neg_ratio['ratio'] = None\n",
+    "    pos_neg_ratio['ratio'] = (pos_neg_ratio['positive'] + 1) / (pos_neg_ratio['negative'] + 1)\n",
     "    ### END CODE HERE ###\n",
     "    return pos_neg_ratio\n"
    ]
