--- a/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "    # euclidean distance\n",
     "\n",
-    "    d = None\n",
+    "    d = np.linalg.norm(A-B)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -934,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
