Implemented "get_country"

--- a/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
@@ -501,20 +501,20 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "\n",
     "    # store the city1, country 1, and city 2 in a set called group\n",
-    "    group = set((None, None, None))\n",
+    "    group = set((city1, country1, city2))\n",
     "\n",
     "    # get embeddings of city 1\n",
-    "    city1_emb = None\n",
+    "    city1_emb = embeddings[city1]\n",
     "\n",
     "    # get embedding of country 1\n",
-    "    country1_emb = None\n",
+    "    country1_emb = embeddings[country1]\n",
     "\n",
     "    # get embedding of city 2\n",
-    "    city2_emb = None\n",
+    "    city2_emb = embeddings[city2]\n",
     "\n",
     "    # get embedding of country 2 (it's a combination of the embeddings of country 1, city 1 and city 2)\n",
     "    # Remember: King - Man + Woman = Queen\n",
-    "    vec = None\n",
+    "    vec = country1_emb - city1_emb + city2_emb\n",
     "\n",
     "    # Initialize the similarity to -1 (it will be replaced by a similarities that are closer to +1)\n",
     "    similarity = -1\n",
@@ -529,19 +529,19 @@
     "        if word not in group:\n",
     "\n",
     "            # get the word embedding\n",
-    "            word_emb = None\n",
+    "            word_emb = embeddings[word]\n",
     "\n",
     "            # calculate cosine similarity between embedding of country 2 and the word in the embeddings dictionary\n",
-    "            cur_similarity = None\n",
+    "            cur_similarity = cosine_similarity(vec, word_emb)\n",
     "\n",
     "            # if the cosine similarity is more similar than the previously best similarity...\n",
     "            if cur_similarity > similarity:\n",
     "\n",
     "                # update the similarity to the new, better similarity\n",
-    "                similarity = None\n",
+    "                similarity = cur_similarity\n",
     "\n",
     "                # store the country as a tuple, which contains the word and the similarity\n",
-    "                country = (None, None)\n",
+    "                country = (word, cur_similarity)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
