Implemented "get_accuracy"

--- a/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
@@ -620,30 +620,30 @@
     "    for i, row in data.iterrows():\n",
     "\n",
     "        # get city1\n",
-    "        city1 = None\n",
+    "        city1 = row['city1']\n",
     "\n",
     "        # get country1\n",
-    "        country1 = None\n",
+    "        country1 = row['country1']\n",
     "\n",
     "        # get city2\n",
-    "        city2 =  None\n",
+    "        city2 =  row['city2']\n",
     "\n",
     "        # get country2\n",
-    "        country2 = None\n",
+    "        country2 = row['country2']\n",
     "\n",
     "        # use get_country to find the predicted country2\n",
-    "        predicted_country2, _ = None\n",
+    "        predicted_country2, _ = get_country(city1, country1, city2, word_embeddings)\n",
     "\n",
     "        # if the predicted country2 is the same as the actual country2...\n",
     "        if predicted_country2 == country2:\n",
     "            # increment the number of correct by 1\n",
-    "            num_correct += None\n",
+    "            num_correct += 1\n",
     "\n",
     "    # get the number of rows in the data dataframe (length of dataframe)\n",
     "    m = len(data)\n",
     "\n",
     "    # calculate the accuracy by dividing the number correct by m\n",
-    "    accuracy = None\n",
+    "    accuracy = num_correct / float(m)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy\n"
