Implemented "compute_pca"

--- a/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-3/C1_W3_Assignment.ipynb
@@ -775,35 +775,35 @@
     "\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # mean center the data\n",
-    "    X_demeaned = None\n",
+    "    X_demeaned = X - np.mean(X,axis=0)\n",
     "\n",
     "    # calculate the covariance matrix\n",
-    "    covariance_matrix = None\n",
+    "    covariance_matrix = np.cov(X_demeaned, rowvar=False)\n",
     "\n",
     "    # calculate eigenvectors & eigenvalues of the covariance matrix\n",
-    "    eigen_vals, eigen_vecs = None\n",
+    "    eigen_vals, eigen_vecs = np.linalg.eigh(covariance_matrix, UPLO='L')\n",
     "\n",
     "    # sort eigenvalue in increasing order (get the indices from the sort)\n",
-    "    idx_sorted = None\n",
+    "    idx_sorted = np.argsort(eigen_vals)\n",
     "    \n",
     "    # reverse the order so that it's from highest to lowest.\n",
-    "    idx_sorted_decreasing = None\n",
+    "    idx_sorted_decreasing = idx_sorted[::-1]\n",
     "\n",
     "    # sort the eigen values by idx_sorted_decreasing\n",
-    "    eigen_vals_sorted = None\n",
+    "    eigen_vals_sorted = eigen_vals[idx_sorted_decreasing]\n",
     "\n",
     "    # sort eigenvectors using the idx_sorted_decreasing indices\n",
-    "    eigen_vecs_sorted = None\n",
+    "    eigen_vecs_sorted = eigen_vecs[:,idx_sorted_decreasing]\n",
     "\n",
     "    # select the first n eigenvectors (n is desired dimension\n",
     "    # of rescaled data array, or dims_rescaled_data)\n",
-    "    eigen_vecs_subset = None\n",
+    "    eigen_vecs_subset = eigen_vecs_sorted[:,:n_components]\n",
     "\n",
     "    # transform the data by multiplying the transpose of the eigenvectors \n",
     "    # with the transpose of the de-meaned data\n",
     "    # Then take the transpose of that product.\n",
-    "    X_reduced = None\n",
-    "\n",
+    "    X_reduced = eigen_vecs_subset.T.dot(X_demeaned.T).T\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return X_reduced\n"
