Implemented "get_matrices"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -341,10 +341,10 @@
     "    Y_l = list()\n",
     "\n",
     "    # get the english words (the keys in the dictionary) and store in a set()\n",
-    "    english_set = None\n",
+    "    english_set = english_vecs.keys()\n",
     "\n",
     "    # get the french words (keys in the dictionary) and store in a set()\n",
-    "    french_set = None\n",
+    "    french_set = french_vecs.keys()\n",
     "\n",
     "    # store the french words that are part of the english-french dictionary (these are the values of the dictionary)\n",
     "    french_words = set(en_fr.values())\n",
@@ -359,19 +359,19 @@
     "            en_vec = english_vecs[en_word]\n",
     "\n",
     "            # get the french embedding\n",
-    "            fr_vec = None\n",
+    "            fr_vec = french_vecs[fr_word]\n",
     "\n",
     "            # add the english embedding to the list\n",
     "            X_l.append(en_vec)\n",
     "\n",
     "            # add the french embedding to the list\n",
-    "            None\n",
+    "            Y_l.append(fr_vec)\n",
     "\n",
     "    # stack the vectors of X_l into a matrix X\n",
-    "    X = None\n",
+    "    X = np.vstack(X_l)\n",
     "\n",
     "    # stack the vectors of Y_l into a matrix Y\n",
-    "    Y = None\n",
+    "    Y = np.vstack(Y_l)\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return X, Y\n"
@@ -1965,7 +1965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
