Implemented "compute_loss"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -564,19 +564,19 @@
     "    '''\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # m is the number of rows in X\n",
-    "    m = None\n",
+    "    m = X.shape[0]\n",
     "    \n",
     "    # diff is XR - Y\n",
-    "    diff = None\n",
+    "    diff = np.dot(X,R) - Y\n",
     "\n",
     "    # diff_squared is the element-wise square of the difference\n",
-    "    diff_squared = None\n",
+    "    diff_squared = np.square(diff)\n",
     "\n",
     "    # sum_diff_squared is the sum of the squared elements\n",
-    "    sum_diff_squared = None\n",
+    "    sum_diff_squared = np.sum(diff_squared)\n",
     "\n",
     "    # loss i the sum_diff_squard divided by the number of examples (m)\n",
-    "    loss = None\n",
+    "    loss = sum_diff_squared / m\n",
     "    ### END CODE HERE ###\n",
     "    return loss\n"
    ]
