Implemented "compute_gradient"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -640,10 +640,10 @@
     "    '''\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # m is the number of rows in X\n",
-    "    m = None\n",
+    "    m = X.shape[0]\n",
     "\n",
     "    # gradient is X^T(XR - Y) * 2/m\n",
-    "    gradient = None\n",
+    "    gradient = (2/m) * np.dot(X.T,np.subtract(np.dot(X,R),Y))\n",
     "    ### END CODE HERE ###\n",
     "    return gradient\n"
    ]
