Implemented "align_embeddings"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -767,10 +767,10 @@
     "            print(f\"loss at iteration {i} is: {compute_loss(X, Y, R):.4f}\")\n",
     "        ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "        # use the function that you defined to compute the gradient\n",
-    "        gradient = None\n",
+    "        gradient = compute_gradient(X, Y, R)\n",
     "\n",
     "        # update R by subtracting the learning rate times gradient\n",
-    "        R -= None\n",
+    "        R -= learning_rate*gradient\n",
     "        ### END CODE HERE ###\n",
     "    return R\n"
    ]
