Implemented "nearest_neighbor"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -956,16 +956,16 @@
     "    # for each candidate vector...\n",
     "    for row in candidates:\n",
     "        # get the cosine similarity\n",
-    "        cos_similarity = None\n",
+    "        cos_similarity = cosine_similarity(row,v)\n",
     "\n",
     "        # append the similarity to the list\n",
-    "        None\n",
+    "        similarity_l.append(cos_similarity)\n",
     "        \n",
     "    # sort the similarity list and get the indices of the sorted list\n",
-    "    sorted_ids = None\n",
-    "\n",
+    "    sorted_ids = np.argsort(similarity_l)\n",
+    "    \n",
     "    # get the indices of the k most similar candidate vectors\n",
-    "    k_idx = None\n",
+    "    k_idx = sorted_ids[-k:]\n",
     "    ### END CODE HERE ###\n",
     "    return k_idx\n"
    ]
