Implemented "test_vocabulary"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1038,7 +1038,7 @@
     "\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # The prediction is X times R\n",
-    "    pred = None\n",
+    "    pred = np.dot(X,R)\n",
     "\n",
     "    # initialize the number correct to zero\n",
     "    num_correct = 0\n",
@@ -1046,15 +1046,15 @@
     "    # loop through each row in pred (each transformed embedding)\n",
     "    for i in range(len(pred)):\n",
     "        # get the index of the nearest neighbor of pred at row 'i'; also pass in the candidates in Y\n",
-    "        pred_idx = None\n",
+    "        pred_idx = nearest_neighbor(pred[i],Y)\n",
     "\n",
     "        # if the index of the nearest neighbor equals the row of i... \\\n",
     "        if pred_idx == i:\n",
     "            # increment the number correct by 1.\n",
-    "            num_correct += None\n",
+    "            num_correct += 1\n",
     "\n",
     "    # accuracy is the number correct divided by the number of rows in 'pred' (also number of rows in X)\n",
-    "    accuracy = None\n",
+    "    accuracy = num_correct / len(pred)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
