Implemented "get_document_embedding"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1209,10 +1209,10 @@
     "\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # process the document into a list of words (process the tweet)\n",
-    "    processed_doc = None\n",
+    "    processed_doc = process_tweet(tweet)\n",
     "    for word in processed_doc:\n",
     "        # add the word embedding to the running total for the document embedding\n",
-    "        doc_embedding = None\n",
+    "        doc_embedding = doc_embedding + en_embeddings.get(word,np.zeros(300))\n",
     "    ### END CODE HERE ###\n",
     "    return doc_embedding\n"
    ]
