Implemented "get_document_vecs"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1284,13 +1284,13 @@
     "\n",
     "        ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "        # get the document embedding of the tweet\n",
-    "        doc_embedding = None\n",
+    "        doc_embedding = get_document_embedding(doc,en_embeddings)\n",
     "\n",
     "        # save the document embedding into the ind2Tweet dictionary at index i\n",
-    "        ind2Doc_dict[i] = None\n",
+    "        ind2Doc_dict[i] = doc_embedding\n",
     "\n",
     "        # append the document embedding to the list of document vectors\n",
-    "        document_vec_l.append(None)\n",
+    "        document_vec_l.append(doc_embedding)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
