Implemented "hash_value_of_vector"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1552,17 +1552,17 @@
     "    # calculate the dot product between the vector and the matrix containing the planes\n",
     "    # remember that planes has shape (300, 10)\n",
     "    # The dot product will have the shape (1,10)\n",
-    "    dot_product = None\n",
+    "    dot_product = np.dot(v,planes)\n",
     "\n",
     "    # get the sign of the dot product (1,10) shaped vector\n",
-    "    sign_of_dot_product = None\n",
+    "    sign_of_dot_product = np.sign(dot_product)\n",
     "\n",
     "    # set h to be false (eqivalent to 0 when used in operations) if the sign is negative,\n",
     "    # and true (equivalent to 1) if the sign is positive (1,10) shaped vector\n",
-    "    h = None\n",
+    "    h = sign_of_dot_product > 0\n",
     "\n",
     "    # remove extra un-used dimensions (convert this from a 2D to a 1D array)\n",
-    "    h = None\n",
+    "    h = np.squeeze(h)\n",
     "\n",
     "    # initialize the hash value to 0\n",
     "    hash_value = 0\n",
@@ -1570,7 +1570,7 @@
     "    n_planes = planes.shape[1]\n",
     "    for i in range(n_planes):\n",
     "        # increment the hash value by 2^i * h_i\n",
-    "        hash_value += None\n",
+    "        hash_value += ((2**i) * h[i])\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    # cast hash_value as an integer\n",
