Implemented "make_hash_table"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1663,33 +1663,33 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "\n",
     "    # number of planes is the number of columns in the planes matrix\n",
-    "    num_of_planes = None\n",
+    "    num_of_planes = planes.shape[1]\n",
     "\n",
     "    # number of buckets is 2^(number of planes)\n",
-    "    num_buckets = None\n",
+    "    num_buckets = 2**num_of_planes\n",
     "\n",
     "    # create the hash table as a dictionary.\n",
     "    # Keys are integers (0,1,2.. number of buckets)\n",
     "    # Values are empty lists\n",
-    "    hash_table = None\n",
+    "    hash_table = {i:[] for i in range(num_buckets)}\n",
     "\n",
     "    # create the id table as a dictionary.\n",
     "    # Keys are integers (0,1,2... number of buckets)\n",
     "    # Values are empty lists\n",
-    "    id_table = None\n",
-    "\n",
+    "    id_table = {i:[] for i in range(num_buckets)}\n",
+    "    \n",
     "    # for each vector in 'vecs'\n",
     "    for i, v in enumerate(vecs):\n",
     "        # calculate the hash value for the vector\n",
-    "        h = None\n",
+    "        h = hash_value_of_vector(v, planes)\n",
     "\n",
     "        # store the vector into hash_table at key h,\n",
     "        # by appending the vector v to the list at key h\n",
-    "        None\n",
+    "        hash_table[h].append(v)\n",
     "\n",
     "        # store the vector's index 'i' (each document is given a unique integer 0,1,2...)\n",
     "        # the key is the h, and the 'i' is appended to the list at key h\n",
-    "        None\n",
+    "        id_table[h].append(i)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
