Implemented "approximate_knn"

--- a/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
+++ b/nlp-with-classification-vector-spaces/week-4/C1_W4_Assignment.ipynb
@@ -1854,7 +1854,7 @@
     "\n",
     "        # remove the id of the document that we're searching\n",
     "        if doc_id in new_ids_to_consider:\n",
-    "            None\n",
+    "            new_ids_to_consider.remove(doc_id)\n",
     "            print(f\"removed doc_id {doc_id} of input vector from new_ids_to_search\")\n",
     "\n",
     "        # loop through the subset of document vectors to consider\n",
@@ -1864,15 +1864,15 @@
     "            if new_id not in ids_to_consider_set:\n",
     "                # access document_vectors_l list at index i to get the embedding\n",
     "                # then append it to the list of vectors to consider as possible nearest neighbors\n",
-    "                document_vector_at_i = None\n",
-    "                None\n",
+    "                document_vector_at_i = document_vectors_l[i]\n",
+    "                vecs_to_consider_l.append(document_vector_at_i)\n",
     "\n",
     "                # append the new_id (the index for the document) to the list of ids to consider\n",
-    "                None\n",
+    "                ids_to_consider_l.append(new_id)\n",
     "\n",
     "                # also add the new_id to the set of ids to consider\n",
     "                # (use this to check if new_id is not already in the IDs to consider)\n",
-    "                None\n",
+    "                ids_to_consider_set.add(new_id)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
