Implemented "get_count"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -346,6 +346,12 @@
     "    \n",
     "    word_count_dict = {}  # fill this with word counts\n",
     "    ### START CODE HERE \n",
+    "    \n",
+    "    for word in word_l:\n",
+    "        if word in word_count_dict:\n",
+    "            word_count_dict[word] += 1\n",
+    "        else: \n",
+    "            word_count_dict[word] = 1\n",
     "            \n",
     "    ### END CODE HERE ### \n",
     "    return word_count_dict"
