Implemented "get_probs"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -450,6 +450,8 @@
     "    probs = {}  # return this variable correctly\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    total_number_od_words = sum(word_count_dict.values())\n",
+    "    probs = {k:v/total_number_od_words for (k,v) in word_count_dict.items()}\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return probs"
