Implemented "delete_letter"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -645,6 +645,9 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    split_l = [(word[:i], word[i:]) for i in range(len(word) + 1)]\n",
+    "    delete_l = [L+R[1:] for (L,R) in split_l if R]\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    if verbose: print(f\"input word {word}, \\nsplit_l = {split_l}, \\ndelete_l = {delete_l}\")\n",
