Implemented "switch_letter"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -825,6 +825,9 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    split_l = [(word[:i], word[i:]) for i in range(len(word) + 1)]\n",
+    "    switch_l = [L[:-1] + R[0] + L[-1:] + R[1:] for (L,R) in split_l if L and R]\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    if verbose: print(f\"Input word = {word} \\nsplit_l = {split_l} \\nswitch_l = {switch_l}\") \n",
