Implemented "replace_letter"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -964,11 +964,13 @@
     "    split_l = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    replace_l = [word[:i] + letter + word[i+1:] for i in range(len(word)) for letter in letters if word[i] != letter]\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # turn the set back into a list and sort it, for easier viewing\n",
-    "    replace_l = sorted(list(replace_set))\n",
+    "    replace_l = sorted(replace_l)\n",
     "    \n",
     "    if verbose: print(f\"Input word = {word} \\nsplit_l = {split_l} \\nreplace_l {replace_l}\")   \n",
     "    \n",
