Implemented "insert_letter"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -1086,6 +1086,8 @@
     "    split_l = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    insert_l = [word[:word_index] + letter + word[word_index:] for word_index in range(len(word) + 1) for letter in letters] \n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
