Implemented "edit_one_letter"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -1239,6 +1239,8 @@
     "    edit_one_set = set()\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    edits = delete_letter(word) + replace_letter(word) + insert_letter(word) + (switch_letter(word) if allow_switches else []);\n",
+    "    edit_one_set = set(edits)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
