Implemented "get_corrections"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -1476,6 +1476,25 @@
     "    n_best = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    if word in vocab:\n",
+    "        [word]\n",
+    "    \n",
+    "    edit_one_suggestions = edit_one_letter(word)\n",
+    "    if edit_one_suggestions:\n",
+    "        suggestions_set = edit_one_suggestions\n",
+    "    else:\n",
+    "        edit_two_suggestions = edit_two_letters(word)\n",
+    "        if edit_two_suggestions:\n",
+    "            suggestions_set = edit_two_suggestions    \n",
+    "    \n",
+    "    word_to_prob = {}\n",
+    "    for s in suggestions_set:\n",
+    "        word_to_prob[s] = probs.get(s,0)\n",
+    "    \n",
+    "    counter_dict = Counter(word_to_prob)\n",
+    "    \n",
+    "    n_best = counter_dict.most_common(n)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
