Implemented "min_edit_distance"

--- a/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
+++ b/nlp-with-probalistic-models/C2_W1_Assignment.ipynb
@@ -1793,34 +1793,38 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Fill in column 0, from row 1 to row m, both inclusive\n",
-    "    for row in range(None,None): # Replace None with the proper range\n",
-    "        D[row,0] = None\n",
+    "    for row in range(1,m+1): # Replace None with the proper range\n",
+    "        D[row][0] = D[row-1][0] + del_cost\n",
     "        \n",
     "    # Fill in row 0, for all columns from 1 to n, both inclusive\n",
-    "    for col in range(None,None): # Replace None with the proper range\n",
-    "        D[0,col] = None\n",
+    "    for col in range(1,n+1): # Replace None with the proper range\n",
+    "        D[0][col] = D[0][col-1] + ins_cost\n",
     "        \n",
     "    # Loop through row 1 to row m, both inclusive\n",
-    "    for row in range(None,None): \n",
+    "    for row in range(1,m+1): \n",
     "        \n",
     "        # Loop through column 1 to column n, both inclusive\n",
-    "        for col in range(None,None):\n",
+    "        for col in range(1,n+1):\n",
     "            \n",
     "            # Intialize r_cost to the 'replace' cost that is passed into this function\n",
-    "            r_cost = None\n",
+    "            r_cost = rep_cost\n",
     "            \n",
     "            # Check to see if source character at the previous row\n",
     "            # matches the target character at the previous column, \n",
-    "            if None\n",
+    "            if source[row-1] == target[col-1]:\n",
     "                # Update the replacement cost to 0 if source and target are the same\n",
-    "                r_cost = None\n",
-    "                \n",
+    "                r_cost = 0\n",
+    "            \n",
     "            # Update the cost at row, col based on previous entries in the cost matrix\n",
     "            # Refer to the equation calculate for D[i,j] (the minimum of three calculated costs)\n",
-    "            D[row,col] = None\n",
+    "            \n",
+    "            diagonal_cost = D[row-1][col-1]+r_cost\n",
+    "            top_cost = D[row-1][col]+del_cost\n",
+    "            bottom_cost = D[row][col-1]+ins_cost\n",
+    "            D[row,col] = min(diagonal_cost, top_cost, bottom_cost)\n",
     "          \n",
     "    # Set the minimum edit distance with the cost found at row m, column n\n",
-    "    med = None\n",
+    "    med = D[m][n]\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return D, med"
@@ -2020,7 +2024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
