Implemented "predict_pos"

--- a/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
@@ -317,7 +317,7 @@
     "    # initialize the dictionaries using defaultdict\n",
     "    emission_counts = defaultdict(int)\n",
     "    transition_counts = defaultdict(int)\n",
-    "    tag_counts = defaultdict(int)\n",
+    "    tag_counts = defaultdict(int)a\n",
     "    \n",
     "    # Initialize \"prev_tag\" (previous tag) with the start state, denoted by '--s--'\n",
     "    prev_tag = '--s--' \n",
@@ -533,28 +533,28 @@
     "            ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "                        \n",
     "                # define the key as the tuple containing the POS and word\n",
-    "                key = None\n",
+    "                key = (pos,word)\n",
     "\n",
     "                # check if the (pos, word) key exists in the emission_counts dictionary\n",
-    "                if key in None: # complete this line\n",
+    "                if key in emission_counts: # complete this line\n",
     "\n",
     "                # get the emission count of the (pos,word) tuple \n",
-    "                    count = None\n",
+    "                    count = emission_counts[key]\n",
     "\n",
     "                    # keep track of the POS with the largest count\n",
-    "                    if None: # complete this line\n",
+    "                    if count > count_final: # complete this line\n",
     "\n",
     "                        # update the final count (largest count)\n",
-    "                        count_final = None\n",
+    "                        count_final = count\n",
     "\n",
     "                        # update the final POS\n",
-    "                        pos_final = None\n",
+    "                        pos_final = pos\n",
     "\n",
     "            # If the final POS (with the largest count) matches the true POS:\n",
-    "            if None: # complete this line\n",
+    "            if pos_final == y_tup_l[1]: # complete this line\n",
     "                \n",
     "                # Update the number of correct predictions\n",
-    "                num_correct += None\n",
+    "                num_correct += 1\n",
     "            \n",
     "    ### END CODE HERE ###\n",
     "    accuracy = num_correct / total\n",
