--- a/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A few items of the training corpus list\n",
-      "['In\\tIN\\n', 'an\\tDT\\n', 'Oct.\\tNNP\\n', '19\\tCD\\n', 'review\\tNN\\n']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load in the training corpus\n",
     "with open(\"WSJ_02-21.pos\", 'r') as f:\n",
@@ -134,21 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A few items of the vocabulary list\n",
-      "['!', '#', '$', '%', '&', \"'\", \"''\", \"'40s\", \"'60s\", \"'70s\", \"'80s\", \"'86\", \"'90s\", \"'N\", \"'S\", \"'d\", \"'em\", \"'ll\", \"'m\", \"'n'\", \"'re\", \"'s\", \"'til\", \"'ve\", '(', ')', ',', '-', '--', '--n--', '--unk--', '--unk_adj--', '--unk_adv--', '--unk_digit--', '--unk_noun--', '--unk_punct--', '--unk_upper--', '--unk_verb--', '.', '...', '0.01', '0.0108', '0.02', '0.03', '0.05', '0.1', '0.10', '0.12', '0.13', '0.15']\n",
-      "\n",
-      "A few items at the end of the vocabulary list\n",
-      "['yards', 'yardstick', 'year', 'year-ago', 'year-before', 'year-earlier', 'year-end', 'year-on-year', 'year-round', 'year-to-date', 'year-to-year', 'yearlong', 'yearly', 'years', 'yeast', 'yelled', 'yelling', 'yellow', 'yen', 'yes', 'yesterday', 'yet', 'yield', 'yielded', 'yielding', 'yields', 'you', 'young', 'younger', 'youngest', 'youngsters', 'your', 'yourself', 'youth', 'youthful', 'yuppie', 'yuppies', 'zero', 'zero-coupon', 'zeroing', 'zeros', 'zinc', 'zip', 'zombie', 'zone', 'zones', 'zoning', '{', '}', '']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read the vocabulary data, split by each line of text, and save the list\n",
     "with open(\"hmm_vocab.txt\", 'r') as f:\n",
@@ -700,22 +679,22 @@
     "        \n",
     "            # Define the tuple (prev POS, current POS)\n",
     "            # Get the tag at position i and tag at position j (from the all_tags list)\n",
-    "            key = None\n",
+    "            key = (all_tags[i],all_tags[j])\n",
     "\n",
     "            # Check if the (prev POS, current POS) tuple \n",
     "            # exists in the transition counts dictionary\n",
-    "            if None: #complete this line\n",
+    "            if key in transition_counts: #complete this line\n",
     "                \n",
     "                # Get count from the transition_counts dictionary \n",
     "                # for the (prev POS, current POS) tuple\n",
-    "                count = None\n",
+    "                count = transition_counts[key]\n",
     "                \n",
     "            # Get the count of the previous tag (index position i) from tag_counts\n",
-    "            count_prev_tag = None\n",
+    "            count_prev_tag = tag_counts[all_tags[i]]\n",
     "            \n",
     "            # Apply smoothing using count of the tuple, alpha, \n",
     "            # count of previous tag, alpha, and total number of tags\n",
-    "            A[i,j] = None\n",
+    "            A[i,j] = (count + alpha) / (count_prev_tag + alpha * num_tags)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
