Implemented "create_emission_matrix"

--- a/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
@@ -820,29 +820,29 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Go through each row (POS tags)\n",
-    "    for i in None: # complete this line\n",
+    "    for i in range(num_tags): # complete this line\n",
     "        \n",
     "        # Go through each column (words)\n",
-    "        for j in None: # complete this line\n",
+    "        for j in range(num_words): # complete this line\n",
     "\n",
     "            # Initialize the emission count for the (POS tag, word) to zero\n",
     "            count = 0\n",
     "                    \n",
     "            # Define the (POS tag, word) tuple for this row and column\n",
-    "            key =  None\n",
+    "            key =  (all_tags[i],vocab[j])\n",
     "\n",
     "            # check if the (POS tag, word) tuple exists as a key in emission counts\n",
-    "            if None: # complete this line\n",
+    "            if key in emission_counts: # complete this line\n",
     "        \n",
     "                # Get the count of (POS tag, word) from the emission_counts d\n",
-    "                count = None\n",
+    "                count = emission_counts[key]\n",
     "                \n",
     "            # Get the count of the POS tag\n",
-    "            count_tag = None\n",
+    "            count_tag = tag_counts[all_tags[i]]\n",
     "                \n",
     "            # Apply smoothing and store the smoothed value \n",
     "            # into the emission matrix B for this row and column\n",
-    "            B[i,j] = None\n",
+    "            B[i,j] = (count + alpha) / (count_tag + alpha * num_words)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return B"
