--- a/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
@@ -1016,20 +1016,20 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Go through each of the POS tags\n",
-    "    for i in None: # complete this line\n",
+    "    for i in range(num_tags): # complete this line\n",
     "        \n",
     "        # Handle the special case when the transition from start token to POS tag i is zero\n",
-    "        if None: # complete this line\n",
+    "        if A[s_idx, i] == 0:  # complete this line\n",
     "            \n",
     "            # Initialize best_probs at POS tag 'i', column 0, to negative infinity\n",
-    "            best_probs[i,0] = None\n",
+    "            best_probs[i, 0] = float('-inf')\n",
     "        \n",
     "        # For all other cases when transition from start token to POS tag i is non-zero:\n",
     "        else:\n",
     "            \n",
     "            # Initialize best_probs at POS tag 'i', column 0\n",
     "            # Check the formula in the instructions above\n",
-    "            best_probs[i,0] = None\n",
+    "            best_probs[i, 0] = math.log(A[s_idx, i]) + math.log(B[i, vocab[corpus[0]]])\n",
     "                        \n",
     "    ### END CODE HERE ### \n",
     "    return best_probs, best_paths"
